--- a/Examenfinal/nbproject/project.properties
+++ b/Examenfinal/nbproject/project.properties
@@ -35,31 +35,31 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Examenfinal
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\Users\\yanpi\\Downloads\\activation-1.1.1.jar\\activation-1.1.1.jar
 file.reference.activation-jaf1.1.1.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\activation-jaf1.1.1.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\yanpi\\Downloads\\commons-logging-1.2.jar
 file.reference.commons-logging-1.2.jar-1=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\commons-logging-1.2.jar
-file.reference.Escritorio-pdf=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf
-file.reference.fontbox-2.0.19.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf\\fontbox-2.0.19.jar
+file.reference.fontbox-2.0.19.jar=C:\\Users\\yanpi\\Downloads\\jar_files\\fontbox-2.0.19.jar
 file.reference.fontbox-2.0.19.jar-1=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\fontbox-2.0.19.jar
-file.reference.javax.mail-1.6.2.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\javax.mail-1.6.2.jar
-file.reference.javax.mail-1.6.2.jar-1=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\javax.mail-1.6.2.jar
-file.reference.pdfbox-2.0.19.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf\\pdfbox-2.0.19.jar
+file.reference.javax.mail-1.6.1.jar=C:\\Users\\yanpi\\Downloads\\javax.mail-1.6.1.jar
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\javax.mail-1.6.2.jar
+file.reference.pdfbox-2.0.19.jar=C:\\Users\\yanpi\\Downloads\\pdfbox-2.0.19.jar
 file.reference.pdfbox-2.0.19.jar-1=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\pdfbox-2.0.19.jar
-file.reference.pdfbox-tools-2.0.19.jar=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf\\pdfbox-tools-2.0.19.jar
+file.reference.pdfbox-tools-2.0.19.jar=C:\\Users\\yanpi\\Downloads\\pdfbox-tools-2.0.19.jar
 file.reference.pdfbox-tools-2.0.19.jar-1=C:\\Users\\aleja\\OneDrive\\Escritorio\\pdf_correo_jars\\pdfbox-tools-2.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Escritorio-pdf}:\
+    ${file.reference.javax.mail-1.6.1.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fontbox-2.0.19.jar}:\
     ${file.reference.pdfbox-2.0.19.jar}:\
     ${file.reference.pdfbox-tools-2.0.19.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.activation-jaf1.1.1.jar}:\
     ${file.reference.commons-logging-1.2.jar-1}:\
     ${file.reference.fontbox-2.0.19.jar-1}:\
-    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.pdfbox-2.0.19.jar-1}:\
     ${file.reference.pdfbox-tools-2.0.19.jar-1}
 # Space-separated list of extra javac options
@@ -70,8 +70,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=20
-javac.target=20
+javac.source=12
+javac.target=12
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -101,7 +101,7 @@ main.class=controller.ApiMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Zulu_20.0.2_9
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
